--- a/TechJobsPersistent/TechJobsPersistent.csproj
+++ b/TechJobsPersistent/TechJobsPersistent.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Views\Skill\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.5" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 </Project>
