--- a/TechJobsPersistent/TechJobsPersistent.csproj
+++ b/TechJobsPersistent/TechJobsPersistent.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Views\Employer\" />
     <Folder Include="Data\" />
     <Folder Include="Views\List\" />
